--- a/.github/workflows/build_unix.yml
+++ b/.github/workflows/build_unix.yml
@@ -12,7 +12,7 @@ on:
 jobs:
 
   build_linux:
-    name: Build_Linux
+    name: Build_Unix
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -37,6 +37,25 @@ jobs:
           compiler_version: "10"
           python: 3.7
           test_render: ON
+
+        - name: MacOS_Xcode_10_Python27
+          os: macos-10.15
+          compiler: xcode
+          compiler_version: "10.3"
+          python: 2.7
+          cmake_config: -DMATERIALX_PYTHON_VERSION=2 -DMATERIALX_BUILD_SHARED_LIBS=ON
+
+        - name: MacOS_Xcode_11_Python37
+          os: macos-10.15
+          compiler: xcode
+          compiler_version: "11.7"
+          python: 3.7
+
+        - name: MacOS_Xcode_12_Python37
+          os: macos-10.15
+          compiler: xcode
+          compiler_version: "12.2"
+          python: 3.7
 
     steps:
     - name: Sync Repository
